--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-p5": "^1.3.21",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.3.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
